test/fail/TooManyArgumentsInLHS.agda

module TooManyArgumentsInLHS where

F : Set -> Set
F X Y = Y

